<resources>
    <string name="app_name">AsthmaTrack_ST</string>
    <string name="action_btn_save">SAVE</string>
    <string name="action_btn_next">NEXT</string>
    <string name="action_btn_skip">SKIP</string>
    <string name="action_btn_done">DONE</string>
    <string name="action_btn_finish">FINISH</string>
    <string name="action_btn_edit">EDIT</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="splash_product_date">July 2016 XX/XXX/0000/00</string>
    <string name="splash_about_text_title">980 Great West Road, Brentford, Middlesex, TW8 9GS, UK</string>
    <string name="splash_about_text1">2016 GSK group of companies, All rights reserved.</string>
    <string name="splash_about_text2">GlaxoSmithKine plc, Registered in England and</string>
    <string name="splash_about_text3">Wales No. 3888372.</string>
    <string name="splash_provided_by">Environmental data provided by:</string>
    <string name="activate_welcome">Welcome</string>
    <string name="activate_detail">To activate your account, you\’ll need to \n
                        Enter the Activation code given to you\n
                        By your care team\n</string>
    <string name="activate_active_code">Activation Code</string>
    <string name="activate_active_button">Activate</string>
    <string name="activate_terms_of_use">Terms of Use</string>
    <string name="activate_login_here">Login here</string>
    <string name="activate_already_entered">Already entered an activation code?</string>
    <string name="activate_failed">Activation failed. Code incomplete</string>
    <string name="actionbar_terms_title">Terms of use</string>
    <string name="terms_title">Lorem ipsum dolor sit amet. </string>
    <string name="btn_agree">Agree</string>
    <string name="btn_decline">Decline</string>
    <string name="terms_sub_title">Pulvinar neque at sapien aliquet, in maximus risus aliquam. Fusce at ultrices neque, eu sodales odio.</string>
    <string name="terms_detail">Donec purus ligula, hendrerit elementum elementum vitae, vehicula eget dolor. Quisque ex diam, sollicitudin a massa in, accumsan faucibus justo. Duis hendrerit purus eget est ullamcorper imperdiet. Integer fringilla erat nisi, vel pharetra felis viverra vel. \n\n
                                Suspendisse et magna vitae tortor bibendum vulputate. Proin luctus mattis nisi, non pulvinar arcu auctor sed. Fusce faucibus neque eget felis egestas condimentum. Vivamus sodales mi a nulla malesuada gravida. Cras porttitor urna vel nisi lobortis euismod. Nullam vitae est sed massa tempus viverra convallis ac nibh. Sed in eros quis nisl luctus scelerisque. Sed fringilla tortor sit amet sem consectetur, et ultrices ligula hendrerit. Nullam a odio sit amet magna sodales faucibus ultrices sed nibh. Nullam dapibus nunc a interdum imperdiet. Nullam convallis dolor at urna ullamcorper mollis. Maecenas facilisis fringilla urna ut pellentesque. Proin non tortor arcu. Fusce at arcu tristique, aliquam risus vitae, vehicula est. </string>
    <string name="terms_detail_decision">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer gravida scelerisque lectus, sed lobortis orci posuere sed. Cras aliquam id ligula nec sollicitudin. Ut ut ligula purus. Phasellus lacinia, odio nec. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer gravida scelerisque lectus, sed lobortis orci posuere sed. Cras aliquam id ligula nec sollicitudin. Ut ut ligula purus. Phasellus lacinia, odio nec.\n\n
								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mattis felis vitae efficitur egestas. Nam dapibus ultricies ipsum laoreet volutpat. Praesent nunc orci, pulvinar a porttitor sed, ornare ac sem. Ut malesuada velit libero, id aliquam sapien varius in. Ut ut odio a odio tincidunt blandit.</string>
    <string name="actionbar_login">Login to AsthmaTrack</string>
    <string name="login_btn_login">LOGIN</string>
    <string name="login_email">Email</string>
    <string name="login_email_hint">email@emailaddress.com</string>
    <string name="login_password">Password</string>
    <string name="login_password_show">Show</string>
    <string name="login_password_hide">Hide</string>
    <string name="login_forgotten_password">Forgotten Password?</string>
    <string name="actionbar_forgot">Forgotten Password</string>
    <string name="forgot_detail">Enter the email address associated\n with your account</string>
    <string name="forgot_send_psd_reset">Send Password Reset Email </string>
    <string name="forgot_email_sent">Email sent!</string>
    <string name="forgot_check_email">Check email</string>
    <string name="forgot_email_sent_detail">We’ve sent you an email with a link to\n reset your password</string>
    <string name="actionbar_set_new_psd">Set New Password</string>
    <string name="set_new_psd_detail">Enter your new password</string>
    <string name="set_new_psd">New Password</string>
    <string name="set_psd_must_have">Password must have:</string>
    <string name="set_psd_characters">8-20 characters (A-Z, a-z)</string>
    <string name="set_at_least_one">At least one\n special character</string>
    <string name="set_at_least_one_number">At least one number(0-9)</string>
    <string name="set_psd_changed">Password changed!</string>
    <string name="set_psd_changed_detail">Please return to the Login screen and \n enter your details</string>
    <string name="set_return_login">Return to Login</string>
    <string name="activate_acnt_detail">We’ll only use these details so that you\n can login or reset your password</string>
    <string name="activate_login_failed">Login failed, Invalid email.</string>
    <string name="actionbar_act_account">Activate Account</string>
    <string name="activate_acnt_ok">Account Activated!</string>
    <string name="activate_ok_detail">We now need to know a little bit more\n about you in order for you to get the most\n from this app</string>
    <string name="activate_continue">Continue</string>
    <string name="actionbar_little_about_you">A little about you</string>
    <string name="little_person_info">Personal Information</string>
    <string name="little_asthma_info">Asthma Information</string>
    <string name="little_detail1">We would like to know a little more about you</string>
    <string name="little_detail2">so we can personalise your experience using</string>
    <string name="little_height">Height</string>
    <string name="little_add_height_btn">Tap to add your height</string>
    <string name="little_weight">Weight</string>
    <string name="little_add_weight_btn">Tap to add your weight</string>
    <string name="little_press_hold_change_btn">Press and hold to change</string>
    <string name="little_medication">Medication</string>
    <string name="little_add_medication">Add a medication</string>
    <string name="little_height_kilo" formatted="false">%.1fkg</string>
    <string name="little_height_value" formatted="false">%dcm   |   %d\’%d\”   |   %d</string>
    <string name="little_weight_value" formatted="false">%.1fkg   |   %.1flbs   |   %dst %dlbs</string>
    <string name="little_acgraph_top_detail1">To help monitor your activity you can link to the \nActiGraph tracker you may already be using</string>
    <string name="little_acgraph_top_detail2">Don’t worry if you don’t have a device; all\n data can be entered manually in the app</string>
    <string name="little_acgraph_comptable_dev">Compatible Devices</string>
    <string name="little_acgraph_only_can_link">You can only link one ActiGraph at a time</string>
    <string name="little_acgraph_dev_found">ActiGraph Devices Found</string>
    <string name="little_acgraph_link_actgraph">Link to this ActiGraph</string>
    <string name="actionbar_add_medi">Add new medication</string>
    <string name="add_medi_type">Type of medication</string>
    <string name="add_medi_dosage">Dosage of new medication</string>
    <string name="add_medi_frequency">Frequency talking this medication</string>
    <string name="add_medi_how_take">How do you take it?</string>
    <string name="add_medi_how_often">How often?</string>
    <string name="add_medi_time_per_day">times per day</string>
    <string name="add_medi_type_steroid">Steroid Tablets</string>
    <string name="add_medi_type_preventer">Preventer</string>
    <string name="add_medi_type_reliever">Reliever</string>
    <string name="actionbar_add_height">Add Height</string>
    <string name="actionbar_add_weight">Add Weight</string>
    <string name="add_hw_drag_weight">Drag slider, release to set your weight</string>
    <string name="add_hw_drag_height">Drag slider, release to set your height</string>
    <string name="actionbar_take_act">Take the Act</string>
    <string name="take_act_detail">This is the Asthma Control Test™ (ACT) it\'s \n
        simple and takes less than a minute helping \n
        you get a clearer picture of how well controlled\n
        your asthma is</string>
    <string name="take_act_describ1">1. During the last 4 weeks, how often did your asthma symptoms (wheezing, coughing, chest tightness, shortness of breath) wake you up at night or earlier than usual in the morning?</string>
    <string name="take_act_describ2">2. During the past 4 weeks, how often have you had shortness of breath?</string>
    <string name="take_act_describ3">3. During the last 4 weeks, how often did your asthma symptoms (wheezing, coughing, chest tightness, shortness of breath) wake you up at night or earlier than usual in the morning?</string>
    <string name="take_act_describ4">4. During the past 4 weeks, how often have you used your reliever inhaler? (usually blue)</string>
    <string name="take_act_describ5">5. How would you rate your asthma control during the past 4 weeks?</string>
    <string-array name="take_act_ds_answer">
        <item>4 or more times a week</item>
        <item>2-3 nights a week</item>
        <item>Once a week</item>
        <item>Once or twice</item>
        <item>Not at all</item>
    </string-array>
    <string-array name="rate_asthma_ctrl_answer">
        <item>Not controlled</item>
        <item>Poorly controlled</item>
        <item>Somewhat controlled</item>
        <item>Well controlled</item>
        <item>Completely controlled</item>
    </string-array>
    <string name="actionbar_your_act_res">Your ACT Result</string>
    <string name="what_score_19_lesss_title">A score of 19 or less indicates your asthma symptoms may not be as well controlled as they could be.</string>
    <string name="what_score_19_lesss_detail1">There may be more you or your healthcare provider could do to help control your asthma symptoms.</string>
    <string name="what_score_19_lesss_detail2">NOTE: If your score is 15 or less, your asthma may be very poorly controlled. Please contact your health professional right away.</string>
    <string name="what_score_20_over_title">A score of 20-25 indicates your asthma symptoms appear to be well-controlled.</string>
    <string name="what_score_20_over_detail">Even so, asthma control can change over time so it’s important to retest yourself regularly. Continue to talk to your healthcare provider about your asthma control.</string>
    <string name="dboard_data_unavailable">Data unavailable</string>
    <string name="dboard_check_internet">Check your internet connection</string>
    <string name="dboard_air">Air Quality</string>
    <string name="dboard_air_status">Status:</string>
    <string name="dboard_air_status_res">Satisfactory</string>
    <string name="dboard_air_status_good">Good</string>
    <string name="settings_adding">Adding Data</string>
    <string name="settings_adding_detail">Adding data for things like ACT, ASQ, attacks and spirometry, peak flow and weight couldn’t be easier</string>
    <string name="settings_adding_simply_tap">Simply tap the ‘Add data’ buttons\n
                    to add data to your desired choice</string>
</resources>