<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="25px"
    android:minHeight="25px">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_back"
        android:id="@+id/imgSplashBack" />
    <RelativeLayout
        style="@style/MatchParentRL"
        android:layout_above="@+id/rlSplashCopyright"
        android:padding="@dimen/pad_9dp"
        android:layout_marginTop="@dimen/pad_12dp">

        <RelativeLayout
            android:id="@+id/rlLogo"
            style="@style/MatchParentRL"
            android:layout_height="@dimen/pad_130dp"
            android:background="@drawable/splash_logo_back">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/splash_logo"/>
        </RelativeLayout>
        <RelativeLayout
            style="@style/MatchParentRL"
            android:layout_below="@+id/rlLogo">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/splash_bottom_img"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/rlSplashCopyright"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pad_60dp"
        android:orientation="vertical"
        android:layout_above="@+id/rlSplashEnv"
        android:background="@color/splashCopyrightBack">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_about_text_title"
            style="@style/WhiteNormalTextTitle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/WhiteNormalText"
            android:text="@string/splash_about_text1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/WhiteNormalText"
            android:text="@string/splash_about_text2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/WhiteNormalText"
            android:text="@string/splash_about_text3"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlSplashEnv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pad_30dp"
        android:layout_above="@+id/rlBottomProductDate"
        android:background="@color/splashEnvProvideBack">
        <TextView
            android:id="@+id/tvProvideBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_provided_by"
            style="@style/WhiteNormalTextTitle"
            android:textSize="@dimen/txt_5_sp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:layout_centerHorizontal="true"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/splash_provide_type"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:layout_below="@+id/tvProvideBy"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rlBottomProductDate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pad_14dp"
        android:layout_alignParentBottom="true"
        android:background="@color/splashProductDateBack">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_product_date"
            style="@style/CopyRightText"
            />
    </RelativeLayout>
</RelativeLayout>