<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="25px"
    android:minHeight="25px">

    <include
        layout="@layout/action_bar" />
    <LinearLayout
        android:id="@+id/llLess19Score"
        android:orientation="vertical"
        android:layout_below="@+id/header_action"
        android:paddingLeft="@dimen/pad_7dp"
        android:paddingRight="@dimen/pad_4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            style="@style/LabelTextView"
            android:text="@string/what_score_19_lesss_title"
            android:layout_marginLeft="@dimen/pad_5dp"
            android:layout_marginTop="@dimen/pad_14dp"
            android:textStyle="bold"
            android:textSize="@dimen/txt_10_sp"
            android:lineSpacingMultiplier="1.3"
            android:textColor="@color/normal_back"
            />
        <View
            android:layout_width="@dimen/pad_60dp"
            android:layout_height="@dimen/pad_3dp"
            android:layout_marginLeft="@dimen/pad_2dp"
            android:layout_marginTop="@dimen/pad_10dp"
            android:background="@drawable/what_score_gradient_border"/>
        <TextView
            style="@style/LabelTextView"
            android:text="@string/what_score_19_lesss_detail1"
            android:layout_marginLeft="@dimen/pad_5dp"
            android:layout_marginTop="@dimen/pad_14dp"
            android:textStyle="normal"
            android:textSize="@dimen/txt_8_sp"
            android:lineSpacingMultiplier="1.3"
            android:textColor="@color/normal_back"
            />
        <TextView
            style="@style/LabelTextView"
            android:text="@string/what_score_19_lesss_detail2"
            android:layout_marginLeft="@dimen/pad_5dp"
            android:layout_marginTop="@dimen/pad_14dp"
            android:textStyle="normal|italic"
            android:textSize="@dimen/txt_7_sp"
            android:lineSpacingMultiplier="1.3"
            android:textColor="@color/normal_back"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOver20Score"
        android:orientation="vertical"
        android:layout_below="@+id/header_action"
        android:paddingLeft="@dimen/pad_7dp"
        android:paddingRight="@dimen/pad_4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            style="@style/LabelTextView"
            android:text="@string/what_score_20_over_title"
            android:layout_marginLeft="@dimen/pad_5dp"
            android:layout_marginTop="@dimen/pad_14dp"
            android:textStyle="bold"
            android:textSize="@dimen/txt_10_sp"
            android:lineSpacingMultiplier="1.3"
            android:textColor="@color/normal_back"
            />
        <View
            android:layout_width="@dimen/pad_60dp"
            android:layout_height="@dimen/pad_3dp"
            android:layout_marginLeft="@dimen/pad_2dp"
            android:layout_marginTop="@dimen/pad_10dp"
            android:background="@drawable/what_score_gradient_border"/>
        <TextView
            style="@style/LabelTextView"
            android:text="@string/what_score_20_over_detail"
            android:layout_marginLeft="@dimen/pad_5dp"
            android:layout_marginTop="@dimen/pad_14dp"
            android:textStyle="normal"
            android:textSize="@dimen/txt_8_sp"
            android:lineSpacingMultiplier="1.3"
            android:textColor="@color/normal_back"
            />
    </LinearLayout>


</RelativeLayout>