<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activityRoot"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minWidth="25px"
        android:minHeight="25px">

        <include layout="@layout/action_bar"/>
        <LinearLayout
            style="@style/MatchParentRL"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/pad_7dp"
            android:paddingRight="@dimen/pad_7dp"
            android:layout_below="@+id/header_action">
            <TextView
                style="@style/WhiteNormalTextTitle"
                android:text="@string/terms_title"
                android:layout_gravity="left"
                android:textSize="@dimen/txt_9_sp"
                android:layout_marginTop="@dimen/pad_2dp"
                android:textColor="@color/termsText"/>

            <TextView
                style="@style/WhiteNormalTextTitle"
                android:text="@string/terms_sub_title"
                android:layout_gravity="left"
                android:lineSpacingMultiplier="1.3"
                android:layout_marginTop="@dimen/pad_7dp"
                android:textSize="@dimen/txt_7_sp"
                android:textColor="@color/termsText"/>

            <TextView
                style="@style/WhiteNormalText"
                android:layout_height="match_parent"
                android:text="@string/terms_detail"
                android:layout_gravity="left"
                android:maxLines="1000"
                android:layout_marginTop="@dimen/pad_14dp"
                android:lineSpacingMultiplier="1.4"
                android:textSize="@dimen/txt_7_sp"
                android:scrollbars="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:textColor="@color/termsText"/>

        </LinearLayout>
</RelativeLayout>